--- a/styles/partials/_media-queries.scss
+++ b/styles/partials/_media-queries.scss
@@ -1,15 +1,13 @@
-@import './variables';
-
 // Desktop Media Query
 @mixin desktop {
-    @media screen and (max-width: 1280px) {
+    @media screen and (min-width: 1280px) {
         @content;
     }
 }
 
 // Tablet Media Query
 @mixin tablet {
-    @media screen and (max-width: 768px) {
+    @media screen and (min-width: 768px) {
         @content;
     }
 }
