comment out example code

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,3 +1,5 @@
+@import "./media-queries";
+
 // Website Colors
 $BandSite-Black:#323232;
 $Silver: #AFAFAF;
@@ -6,3 +8,123 @@ $BandSite-DarkBlack:#000000;
 $Mercury: #E1E1E1;
 $Alabaster:#FAFAFA;
 
+
+// // Global Styles
+
+// // VARIABLES
+// $white-lighter: #FFFFFF;
+// $white: darken($white-lighter, 3%);
+// $white-darker: darken($white, 3%);
+// $black: #555555;
+// $black-lighter: lighten($black, 20%);
+// $black-darker: darken($black, 15%);
+// $primary-color: #00AFB2;
+// $primary-color-lighter: lighten($primary-color, 5%);
+// $primary-color-darker: darken($primary-color, 10%);
+// $secondary-color: #FF6100;
+// $secondary-color-lighter: lighten($secondary-color, 15%);
+// $secondary-color-darker: darken($secondary-color, 15%);
+
+// // GLOBAL STYLES
+// h3 {
+//   margin: 0 0 10px 0;
+// }
+
+// // EXTENSIONS
+// .section {
+//   min-height: 200px;
+// }
+// .centered-block {
+//   display:block;
+//   margin-left:auto;
+//   margin-right:auto;
+// }
+// .article {
+//   max-width: 960px;
+//   padding: 30px 10px;
+//   overflow:auto;
+// }
+// .cta-button--hovered {
+//     background-color: $white;
+//     color:$black-darker;
+//     border: 1px solid $black-lighter;
+//     box-shadow: 1px 3px 0px $black;
+//     transition:0.2s;
+// }
+
+// STYLES
+// .section--first {
+//   @extend .section;
+//   background-color: $white-lighter;
+// }
+
+// .section--second {
+//   @extend .section;
+//   background-color: $white;
+// }
+
+// .coolfeat {
+//   @extend .centered-block;
+//   @extend .article;
+  
+//   &__content {
+//     width:55%;
+//     float:left;
+//   }
+  
+//   &__title {
+//     color: $primary-color-darker;
+//   }
+  
+//   &__subtitle {
+//     color: $primary-color;
+//   }
+  
+//   &__copy {
+//     color: $black-lighter;
+//   }
+  
+//   &__cta {
+//     background-color: $primary-color;
+//     color: $white;
+//     box-shadow: 1px 3px 0px $primary-color-darker;
+//     border: 1px solid $primary-color;
+//     transition: 0.1s;
+//     &:hover {
+//       @extend .cta-button--hovered;
+//     }
+//   }
+// }
+
+// .nicefeat {
+//   @extend .centered-block;
+//   @extend .article;
+  
+//   &__content {
+//     width:55%;
+//     float:right;
+//   }
+  
+//   &__title {
+//     color: $secondary-color-darker;
+//   }
+  
+//   &__subtitle {
+//     color: $secondary-color;
+//   }
+  
+//   &__copy {
+//     color: $black;
+//   }
+  
+//   &__cta {
+//     background-color: $secondary-color;
+//     color: $white;
+//     box-shadow: 1px 3px 0px $secondary-color-darker;
+//     border: 1px solid $secondary-color;
+//     transition: 0.1s;
+//     &:hover {
+//       @extend .cta-button--hovered;
+//     }
+//   }
+// }
