--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -1,18 +1,18 @@
 @font-face {
-    font-family: 'AvenirNextLTPro';
-    src: url(/assets/fonts/AvenirNextLTPro.ttf) format('ttf');
+    font-family: 'Avenir Next LT Pro';
+    src: url(../../assets/fonts/AvenirNextLTPro.ttf) format('ttf') local(Avenir Next LT Pro);
     font-weight: 400;
 }
 
 @font-face {
-    font-family: 'AvenirNextLTPro';
-    src: url(/assets/fonts/AvenirNextLTProDemi.ttf) format('ttf');
+    font-family: 'Avenir Next LT Pro';
+    src: url(../../assets/fonts/AvenirNextLTProDemi.ttf) format('ttf') local(Avenir Next LT Pro Demi);
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'AvenirNextLTPro';
-    src: url(/assets/fonts/AvenirNextLTProBold.ttf) format('ttf');
+    font-family: 'Avenir Next LT Pro';
+    src: url(../../assets/fonts/AvenirNextLTProBold.ttf) format('ttf') local(Avenir Next LT Pro Bold);
     font-weight: 700;
 }
 
