adjust body copy

--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 
 body {
-    
+    font-family:$font-face-avenir;
     font-size:$body-copy-font-size-mobile;
     line-height:$body-copy-line-height-mobile;
     font-weight:$font-weight-regular;
