--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -14,24 +14,44 @@ body {
     }
 }
 
+// main {
+    
+//     @include tablet {
+//         margin-left: 2em;
+//         margin-right: 2em;
+//     }
+//     @include desktop {
+//         width: 1020px;
+//         margin-left: auto;
+//         margin-right: auto;
+//     }
+// }
+
 page-header {
     font-size:$page-header-font-size-mobile;
     line-height:$page-header-line-height-mobile;
     font-weight:$page-header-font-weight-mobile;
     color:$light-background-color;
-    padding-left: 16px;
+    margin-left: 1em;
     
 
     @include tablet {
         font-size:$page-header-font-size-desktop;
         line-height:$page-header-line-height-desktop;
-        padding-left: 36px;
+        margin-left: 1em;
+        }
+
+    @include desktop {
+        width: 1100px;
+        margin-left: auto;
+        margin-right: auto;
+        }
         
     }
-    @include desktop {
-        padding-left: auto;
-    }
-}
+//     @include desktop {
+//         padding-left: auto;
+//     }
+// }
 
 section-header {
     font-size:$section-header-font-size-mobile;
@@ -45,10 +65,16 @@ section-header {
     @include tablet {
         font-size:$section-header-font-size-desktop;
         line-height:$section-header-line-height-desktop;
+        padding:$padding-headlines-tablet;
+        // margin-left: 1em;
+        }
+
+    @include desktop {
+        width: 1100px;
         padding:$padding-headlines-desktop;
-        display: block;
-        
-    }
+        margin-left: auto;
+        margin-right: auto;
+        }
 }
 
 sub-header {
