--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -6,7 +6,7 @@
 }
 .navbar {
     background-color:$BandSite-Black;
-    height: 6em;
+    height: 5.7em;
     position: relative;
 
 
@@ -14,6 +14,7 @@
         display: flex;
         justify-content: flex-start;
         gap: 20px;
+        height: 5.2em;
     }
 
     &__logo {
@@ -36,6 +37,10 @@
             margin: 0px 35px;
             padding: 0px;
         }
+
+        @include desktop {
+            margin: 0;
+        }
     }
     &__menu {
         align-items: center;
@@ -43,13 +48,20 @@
         // padding-left: 16px;
         // padding-right: 16px;
         // padding-top: 1.75em;
-        margin-bottom: 1.75em;
+        margin-bottom: 1.5em;
         display: flex;
         flex-direction: column;
 
         @include tablet {
             flex-direction: row;
             align-items: center;
+            margin-bottom: 0;
+        }
+
+        @include desktop {
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 1100px;
         }
 }
 
@@ -65,7 +77,7 @@
             //     text-decoration: underline;
 
             @include tablet {
-                width: 200px;
+                width: fit-content;
             }
     }
 
@@ -76,17 +88,18 @@
         justify-items: center;
         width: 100%;
         text-align: center;
-        line-height: 3.1em;
+        line-height: 2.8em;
         // padding: .25em;
 
         @include tablet {
-            // padding: 1em;
+            margin-right: 3em;
+            line-height: 5em;
         // justify-content: space-between;
         }
 
         &.active {
             color:$White;
-            border-bottom:$White .2em solid;
+            border-bottom:$White .3em solid;
         }
     }
 }
